tests/baselines/reference/moduleCrashBug1.errors.txt
0.ts line 18 col 5: error TS2123: Tried to set variable type to container type '_modes'.
